--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc"
   },
   "keywords": [],
@@ -24,7 +24,9 @@
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/node": "^20.14.10",
+    "jest": "^30.2.0",
     "ts-node-dev": "2.0.0",
     "typescript": "5.5.3"
   }
 }
+
