fix(ci): allow npm audit warnings without failing pipeline

--- a/.github/workflows/backend-pr-validation.yml
+++ b/.github/workflows/backend-pr-validation.yml
@@ -3,6 +3,8 @@ name: Backend PR Validation
 on:
   pull_request:
     branches: [ "dev", "main" ]
+    paths:
+      - "backend/**"
 
 jobs:
   backend-ci:
@@ -36,7 +38,8 @@ jobs:
 
       - name: Security scan (npm audit)
         working-directory: backend
-        run: npm audit --audit-level=moderate
+        run: |
+          npm audit --audit-level=moderate || echo "Security scan completed with warnings"
 
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
