--- a/.github/workflows/backend-pr-validation.yml
+++ b/.github/workflows/backend-pr-validation.yml
@@ -48,9 +48,20 @@ jobs:
           format: table
           exit-code: 0
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        with:
-          projectBaseDir: backend
+      - name: 🔍 SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v6
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: backend/
+          args: >
+            -Dsonar.projectKey=naseroish_sda-devops-final-project-backend
+            -Dsonar.projectName="Burger Builder Backend"
+            -Dsonar.organization=naseroish
+            -Dsonar.sources=src
+            -Dsonar.tests=__tests__
+            -Dsonar.test.inclusions=__tests__/**/*.test.js
+            -Dsonar.exclusions=**/__tests__/**,**/*.config.js
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.newCode.referenceBranch=main
