--- a/kubernetes/k8s/frontend-manifest.yml
+++ b/kubernetes/k8s/frontend-manifest.yml
@@ -59,7 +59,7 @@ metadata:
     app: frontend
     tier: web
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: frontend
   ports:
