--- a/kubernetes/k8s/frontend-manifest.yml
+++ b/kubernetes/k8s/frontend-manifest.yml
@@ -36,7 +36,7 @@ spec:
           livenessProbe:
             httpGet:
               path: /
-              port: 3000
+              port: http
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
@@ -44,7 +44,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /
-              port: 3000
+              port: http
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
@@ -65,6 +65,6 @@ spec:
   ports:
     - name: http
       port: 80
-      targetPort: 3000
+      targetPort: http
       protocol: TCP
-  sessionAffinity: None
+  sessionAffinity: "None"
