--- a/kubernetes/ingress-manifest.yml
+++ b/kubernetes/ingress-manifest.yml
@@ -9,12 +9,13 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
 
-    # Rate limiting 
+    # Rate limiting
     nginx.ingress.kubernetes.io/rate-limit: "100"
 
     # CORS settings (if needed)
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-methods: >-
+      GET, POST, PUT, DELETE, OPTIONS
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
 
     # Timeout settings
@@ -54,7 +55,7 @@ spec:
                 port:
                   number: 8706
 
-          # Metrics endpoint 
+          # Metrics endpoint
           - path: /metrics
             pathType: Prefix
             backend:
@@ -63,7 +64,7 @@ spec:
                 port:
                   number: 8706
 ---
-# Ingress for IP-based access 
+# Ingress for IP-based access
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
