--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -1,62 +1,113 @@
-name: Frontend Deploy to AKS
+name: Frontend CI/CD - Build, Push & Deploy to AKS
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - main
+      - develop
     paths:
       - 'frontend/**'
+      - 'kubernetes/frontend-manifest.yaml'
 
 env:
-  ACR_NAME: finalcometops
-  ACR_SERVER: finalcometops.azurecr.io
-  IMAGE_NAME: expensy
-  IMAGE_TAG: latest
+  ACR_NAME: cometops
+  ACR_LOGIN_SERVER: cometops.azurecr.io
+  IMAGE_NAME: final/frontend
+  AKS_CLUSTER_NAME: final-cometops-aks-cluster
   AKS_RESOURCE_GROUP: final-cometops
-  AKS_CLUSTER: final-cometops-aks
   NAMESPACE: expensy
-  FRONTEND_BUILD_ARG: NEXT_PUBLIC_API_URL=https://lb-backend-service.expensy.svc.cluster.local
+  DEPLOYMENT_NAME: frontend-deployment
+  CONTAINER_NAME: frontend
+  FRONTEND_BUILD_ARG: NEXT_PUBLIC_API_URL=/api
 
 jobs:
-  deploy-frontend:
+  build-and-push:
+    name: Build and Push Frontend Image
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Log in to ACR
+        run: az acr login --name ${{ env.ACR_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./frontend
+          push: true
+          tags: |
+            ${{ env.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:latest
+          build-args: |
+            ${{ env.FRONTEND_BUILD_ARG }}
+
+      - name: Save image tag
+        run: echo "${{ github.sha }}" > image-tag.txt
+
+      - name: Upload artifact (image tag)
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-image-tag
+          path: image-tag.txt
+
+  deploy:
+    name: Deploy to AKS
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Azure Login
+      - name: Download image tag
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-image-tag
+
+      - name: Read image tag
+        id: image-tag
+        run: |
+          TAG=$(cat image-tag.txt)
+          echo "TAG=$TAG" >> $GITHUB_ENV
+
+      - name: Azure login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to ACR
-        run: az acr login --name ${{ env.ACR_NAME }}
-
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build & Push Frontend Docker Image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./frontend
-          push: true
-          tags: ${{ env.ACR_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-          build-args: |
-            ${{ env.FRONTEND_BUILD_ARG }}
-
-      - name: Get AKS Credentials
-        run: az aks get-credentials --resource-group ${{ env.AKS_RESOURCE_GROUP }} --name ${{ env.AKS_CLUSTER }} --overwrite-existing
-
-      - name: Deploy to AKS
+      - name: Get AKS credentials
         run: |
-          kubectl set image deployment/frontend-deploy \
-            frontend-container=${{ env.ACR_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} \
+          az aks get-credentials \
+            --resource-group ${{ env.AKS_RESOURCE_GROUP }} \
+            --name ${{ env.AKS_CLUSTER_NAME }} \
+            --overwrite-existing
+
+      - name: Update deployment image
+        run: |
+          kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} \
+            ${{ env.CONTAINER_NAME }}=${{ env.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:$TAG \
             -n ${{ env.NAMESPACE }}
-          kubectl rollout status deployment/frontend-deploy -n ${{ env.NAMESPACE }}
 
-      - name: Smoke Test - Check Frontend Availability
+      - name: Wait for rollout
+        run: kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} -n ${{ env.NAMESPACE }} --timeout=15m
+
+      - name: Verify pods and service
         run: |
-          sleep 15
-          EXTERNAL_IP=$(kubectl get svc lb-frontend-service -n ${{ env.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          echo "Frontend external IP: $EXTERNAL_IP"
-          curl -I http://$EXTERNAL_IP/
+          kubectl get pods -n ${{ env.NAMESPACE }} -l app=frontend
+          kubectl get svc frontend-service -n ${{ env.NAMESPACE }}
+
+      - name: Smoke test (Ingress)
+        run: |
+          sleep 10
+          INGRESS_IP=$(kubectl get ingress expensy-ingress-ip -n ${{ env.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "Ingress external IP: $INGRESS_IP"
+          test -n "$INGRESS_IP" || (echo "Ingress has no external IP yet" && exit 1)
+          curl -I --fail http://$INGRESS_IP/
