--- a/.github/workflows/backend-pr-validation.yml
+++ b/.github/workflows/backend-pr-validation.yml
@@ -48,9 +48,9 @@ jobs:
           format: table
           exit-code: 0
 
-      - name: 🔍 SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v6
-        continue-on-error: true  # Allow PR to pass - SonarCloud needs main branch initialization
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-scan-action@v3
+        continue-on-error: true  # Allow PR to pass even if SonarCloud fails
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -65,4 +65,6 @@ jobs:
             -Dsonar.test.inclusions=__tests__/**/*.test.js
             -Dsonar.exclusions=**/__tests__/**,**/*.config.js
             -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
-            -Dsonar.newCode.referenceBranch=main
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
+            -Dsonar.pullrequest.branch=${{ github.head_ref }}
+            -Dsonar.pullrequest.base=${{ github.base_ref }}
