fix: update service references and improve Redis command in manifests (#46)
* fix: update service references and improve Redis command in manifests

* fix: format command array in Redis manifest for better readability

--- a/kubernetes/redis-manifest.yaml
+++ b/kubernetes/redis-manifest.yaml
@@ -28,7 +28,12 @@ spec:
                 secretKeyRef:
                   name: expensy-secrets
                   key: REDIS_PASSWORD
-          command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
+          command:
+            - "redis-server"
+            - "--requirepass"
+            - "$(REDIS_PASSWORD)"
+            - "--dir"
+            - "/bitnami/redis/data"
           resources:
             limits:
               memory: "512Mi"
