--- a/.github/workflows/terraform-pr-validation.yml
+++ b/.github/workflows/terraform-pr-validation.yml
@@ -15,6 +15,11 @@ jobs:
       run:
         working-directory: terraform
         shell: bash
+    env:
+      ARM_CLIENT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
+      ARM_CLIENT_SECRET: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientSecret }}
+      ARM_SUBSCRIPTION_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).subscriptionId }}
+      ARM_TENANT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -34,16 +39,12 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        env:
-          ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
 
       - name: Validate Terraform syntax
         run: terraform validate
 
       - name: Terraform Plan
         run: terraform plan -no-color -input=false -lock=false -out=terraform.tfplan
-        env:
-          ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
 
       - name: Upload Terraform Plan
         uses: actions/upload-artifact@v4
