fix: enhance ArgoCD setup workflow with rollout status checks and retry logic for login

--- a/.github/workflows/setup-argocd.yml
+++ b/.github/workflows/setup-argocd.yml
@@ -105,20 +105,43 @@ jobs:
           fi
           argocd version --client
 
+      - name: Wait for ArgoCD components to be ready (always)
+        run: |
+          # These rollouts can be safely run whether ArgoCD was just installed or already present
+          kubectl rollout status deploy/argocd-server -n $ARGOCD_NAMESPACE --timeout=600s || exit 1
+          kubectl rollout status deploy/argocd-repo-server -n $ARGOCD_NAMESPACE --timeout=600s || exit 1
+          kubectl rollout status deploy/argocd-application-controller -n $ARGOCD_NAMESPACE --timeout=600s || exit 1
+
       - name: Setup ArgoCD port-forward and get admin password
         id: argocd-access
         run: |
           kubectl port-forward svc/argocd-server -n $ARGOCD_NAMESPACE 8080:443 >/dev/null 2>&1 &
           echo "portforward_pid=$!" >> $GITHUB_OUTPUT
-          sleep 10
+          # Wait for port-forward to accept connections
+          for i in {1..20}; do
+            if curl -sk https://localhost:8080 >/dev/null; then
+              break
+            fi
+            echo "Waiting for argocd-server port-forward... ($i/20)"
+            sleep 3
+          done
           PW=$(kubectl -n $ARGOCD_NAMESPACE get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d || true)
           if [ -z "$PW" ]; then PW='${{ secrets.ARGOCD_ADMIN_PASSWORD }}'; fi
           echo "::add-mask::$PW"
           echo "password=$PW" >> $GITHUB_OUTPUT
 
-      - name: Login to ArgoCD
+      - name: Login to ArgoCD (with retries)
         run: |
-          argocd login localhost:8080 --username admin --password '${{ steps.argocd-access.outputs.password }}' --insecure
+          for i in {1..10}; do
+            if argocd login localhost:8080 --username admin --password '${{ steps.argocd-access.outputs.password }}' --insecure; then
+              echo "Logged in to ArgoCD"
+              exit 0
+            fi
+            echo "Retrying ArgoCD login ($i/10) ..."
+            sleep 5
+          done
+          echo "Failed to login to ArgoCD after retries" >&2
+          exit 1
 
       - name: Update admin password (first install only)
         if: steps.check-argocd.outputs.installed == 'false'
